first commit page with search and demo json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.20.5",
     "lucide-react": "^0.522.0",
+    "motion": "^12.20.5",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
